fix(ui): table header are not visible enough
also change the bg color of the body in white

close #6097

--- a/ui/src/styles/layout/element-plus-overload.scss
+++ b/ui/src/styles/layout/element-plus-overload.scss
@@ -301,13 +301,13 @@ form.ks-horizontal {
     --el-table-border: 1px solid var(--bs-border-color);
 
     --el-table-header-text-color: var(--bs-body-color);
-    --el-table-row-hover-bg-color: var(--bs-gray-100-darken-5);
-    --el-table-header-bg-color: var(--bs-gray-100-darken-3);
-    --el-table-tr-bg-color: var(--bs-body-bg);
+    --el-table-row-hover-bg-color: var(--bs-gray-200);
+    --el-table-header-bg-color: #f5f5ff;
+    --el-table-tr-bg-color: var(--bs-white);
 
     html.dark & {
         --el-table-tr-bg-color: var(--card-bg);
-        --el-table-header-bg-color: var(--bs-card-bg);
+        --el-table-header-bg-color: var(--input-bg);
     }
 
     outline: 1px solid var(--bs-border-color);
